--- a/index.html
+++ b/index.html
@@ -25,13 +25,11 @@
       </article>
 
       <article>
-        <h3
-          class="giveaway uppercase text-2xl font-bold tracking-widest text-primary3"
-        >
+        <h3 class="uppercase text-2xl font-bold tracking-widest text-primary3">
           old iphone giveway
         </h3>
-        <h4 class="text-lg font-semibold capitalize tracking-widest">
-          giveway ends on Sunday, 24 november 2020, 8:00am
+        <h4 class="giveaway text-lg font-semibold capitalize tracking-widest">
+          giveaway date
         </h4>
         <p class="tracking-wide text-slate-500">
           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Porro sunt
@@ -43,7 +41,7 @@
           <!-- days -->
           <div class="deadline-format">
             <div>
-              <h4 class="days">34</h4>
+              <h4 class="days font-bold">34</h4>
               <span>days</span>
             </div>
           </div>
@@ -51,7 +49,7 @@
           <!-- hours -->
           <div class="deadline-format">
             <div>
-              <h4 class="hours">34</h4>
+              <h4 class="hours font-bold">34</h4>
               <span>hours</span>
             </div>
           </div>
@@ -59,20 +57,22 @@
           <!-- minutes -->
           <div class="deadline-format">
             <div>
-              <h4 class="mins">34</h4>
-              <span>minutes</span>
+              <h4 class="mins font-bold">34</h4>
+              <span>mins</span>
             </div>
           </div>
 
           <div class="deadline-format">
             <div>
-              <h4 class="mins">34</h4>
-              <span>seconds</span>
+              <h4 class="mins font-bold">34</h4>
+              <span>sec</span>
             </div>
           </div>
         </div>
       </article>
     </section>
+
+
     <!-- javascript -->
     <script src="app.js"></script>
   </body>
